--- a/BioInformatik_UAS.ipynb
+++ b/BioInformatik_UAS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNMt6f9YEhfjUux94H0VoPy"
+      "authorship_tag": "ABX9TyM4+TF4uA4YglJS2pQibkn/"
     },
     "kernelspec": {
       "name": "python3",
@@ -265,7 +265,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "###2. Amino Acid Composition Function"
+        "###2. Composition Based"
       ],
       "metadata": {
         "id": "MBffO2WVMFid"
@@ -273,12 +273,87 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Function with AAC Method\n",
+        "def amino_acid_composition(sequence):\n",
+        "    aa_count = {aa: sequence.count(aa) for aa in 'ACDEFGHIKLMNPQRSTVWY'}\n",
+        "    total = len(sequence)\n",
+        "    aa_percent = {aa: count / total * 100 for aa, count in aa_count.items()}\n",
+        "    return aa_percent\n",
+        "\n",
+        "# Extract amino acid composition for the first 5 sequences of each dataset\n",
+        "pdb_aac = pdb['sequence'].head(5).apply(amino_acid_composition)\n",
+        "uniswiss_aac = uniswiss['sequence'].head(5).apply(amino_acid_composition)\n",
+        "\n",
+        "pdb_acc_df = pd.DataFrame(list(pdb_aac))\n",
+        "uniswiss_acc_df = pd.DataFrame(list(uniswiss_aac))\n",
+        "\n",
+        "# Display the first 5 amino acid compositions for both datasets\n",
+        "print(\"Amino Acid Composition (PDB Dataset):\")\n",
+        "print(pdb_acc_df)\n",
+        "\n",
+        "print(\"\\nAmino Acid Composition (UniSwiss Dataset):\")\n",
+        "print(uniswiss_acc_df)\n"
+      ],
       "metadata": {
-        "id": "kHJUNsaBMIL2"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kHJUNsaBMIL2",
+        "outputId": "3c642a72-ac7d-4f22-fb03-e246745ad914"
       },
-      "execution_count": 54,
-      "outputs": []
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Amino Acid Composition (PDB Dataset):\n",
+            "           A         C         D          E         F          G         H  \\\n",
+            "0   4.819277  0.000000  2.409639   9.638554  2.409639   3.614458  1.204819   \n",
+            "1  15.942029  0.000000  7.246377  10.144928  1.449275   5.797101  1.449275   \n",
+            "2   5.069124  0.921659  6.451613   5.529954  6.451613   2.764977  0.921659   \n",
+            "3   4.938272  0.000000  6.172840   8.641975  2.469136  12.345679  1.234568   \n",
+            "4   7.926829  1.219512  3.048780   7.317073  3.048780   7.926829  6.097561   \n",
+            "\n",
+            "           I          K          L         M         N         P         Q  \\\n",
+            "0   7.228916  13.253012  10.843373  1.204819  8.433735  4.819277  1.204819   \n",
+            "1  14.492754  10.144928   7.246377  2.898551  0.000000  2.898551  0.000000   \n",
+            "2  10.599078  12.903226   8.294931  2.304147  5.990783  0.921659  4.147465   \n",
+            "3   3.703704  13.580247   6.172840  1.234568  2.469136  2.469136  3.703704   \n",
+            "4   8.536585   3.048780   6.097561  4.268293  5.487805  3.048780  7.317073   \n",
+            "\n",
+            "           R         S         T         V         W         Y  \n",
+            "0   8.433735  6.024096  7.228916  2.409639  2.409639  2.409639  \n",
+            "1  11.594203  2.898551  2.898551  2.898551  0.000000  0.000000  \n",
+            "2   4.147465  6.912442  1.382488  5.069124  1.382488  7.834101  \n",
+            "3   7.407407  6.172840  2.469136  8.641975  2.469136  3.703704  \n",
+            "4   4.268293  3.048780  6.707317  8.536585  2.439024  0.609756  \n",
+            "\n",
+            "Amino Acid Composition (UniSwiss Dataset):\n",
+            "          A         C         D         E         F         G         H  \\\n",
+            "0  8.034188  1.025641  7.264957  8.034188  4.615385  4.871795  1.965812   \n",
+            "1  5.870021  0.419287  5.241090  2.515723  4.612159  7.127883  2.725367   \n",
+            "2  7.112971  2.928870  7.112971  5.439331  2.510460  3.765690  3.347280   \n",
+            "3  7.312925  1.190476  5.102041  6.292517  4.761905  6.632653  1.360544   \n",
+            "4  7.002801  3.641457  6.162465  7.142857  2.521008  4.761905  3.081232   \n",
+            "\n",
+            "          I         K          L         M         N          P         Q  \\\n",
+            "0  5.470085  6.153846   9.487179  1.538462  4.529915   3.675214  5.555556   \n",
+            "1  5.870021  1.257862   6.498952  1.886792  2.515723  10.901468  2.515723   \n",
+            "2  8.368201  5.020921  10.878661  1.673640  3.765690   3.347280  6.276151   \n",
+            "3  3.401361  4.081633  10.714286  2.210884  5.272109   6.972789  5.952381   \n",
+            "4  4.341737  7.703081   8.823529  1.820728  5.182073   5.322129  3.921569   \n",
+            "\n",
+            "          R          S          T         V         W         Y  \n",
+            "0  7.179487   4.102564   5.811966  6.581197  1.111111  2.991453  \n",
+            "1  6.079665  10.901468  12.578616  7.547170  0.838574  2.096436  \n",
+            "2  5.439331   6.276151   4.602510  5.439331  1.255230  5.439331  \n",
+            "3  4.251701  10.034014   4.251701  6.122449  1.530612  2.551020  \n",
+            "4  4.901961  10.084034   4.621849  5.322129  1.260504  2.380952  \n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
