W1 - Add DNA binding vs non binding compositional - EDA

--- a/BioInformatik_UAS.ipynb
+++ b/BioInformatik_UAS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM4+TF4uA4YglJS2pQibkn/"
+      "authorship_tag": "ABX9TyPjmgk1NoWz6+mZRktJk6rw"
     },
     "kernelspec": {
       "name": "python3",
@@ -300,9 +300,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kHJUNsaBMIL2",
-        "outputId": "3c642a72-ac7d-4f22-fb03-e246745ad914"
+        "outputId": "680d7456-efb3-40fb-b448-281d5a110db1"
       },
-      "execution_count": 57,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
@@ -366,12 +366,75 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Separate DNA-binding and non-binding proteins in the PDB and UniSwiss datasets\n",
+        "\n",
+        "# PDB Dataset\n",
+        "binding_pdb = pdb[pdb['label'] == 1]  # DNA binding proteins\n",
+        "non_binding_pdb = pdb[pdb['label'] == 0]  # Non-binding proteins\n",
+        "\n",
+        "# UniSwiss Dataset\n",
+        "binding_uniswiss = uniswiss[uniswiss['label'] == 1]  # DNA binding proteins\n",
+        "non_binding_uniswiss = uniswiss[uniswiss['label'] == 0]  # Non-binding proteins\n",
+        "\n",
+        "# Compare AAC between DNA-binding and non-binding proteins PDB\n",
+        "binding_pdb_aac = binding_pdb['sequence'].apply(amino_acid_composition)\n",
+        "non_binding_pdb_aac = non_binding_pdb['sequence'].apply(amino_acid_composition)\n",
+        "\n",
+        "# Compare AAC between DNA-binding and non-binding proteins UniSwiss\n",
+        "binding_uniswiss_aac = binding_uniswiss['sequence'].apply(amino_acid_composition)\n",
+        "non_binding_uniswiss_aac = non_binding_uniswiss['sequence'].apply(amino_acid_composition)\n",
+        "\n",
+        "# Example: Compare Arginine (R) and Lysine (K) content in PDB\n",
+        "binding_pdb_aa_composition_R = binding_pdb_aac.apply(lambda x: x.get('R', 0)).mean()\n",
+        "non_binding_pdb_aa_composition_R = non_binding_pdb_aac.apply(lambda x: x.get('R', 0)).mean()\n",
+        "\n",
+        "binding_pdb_aa_composition_K = binding_uniswiss_aac.apply(lambda x: x.get('K', 0)).mean()\n",
+        "non_binding_pdb_aa_composition_K = non_binding_uniswiss_aac.apply(lambda x: x.get('K', 0)).mean()\n",
+        "\n",
+        "# Example: Compare Arginine (R) and Lysine (K) content in UniSwiss\n",
+        "binding_uniswiss_aa_composition_R = binding_uniswiss_aac.apply(lambda x: x.get('R', 0)).mean()\n",
+        "non_binding_uniswiss_aa_composition_R = non_binding_uniswiss_aac.apply(lambda x: x.get('R', 0)).mean()\n",
+        "\n",
+        "binding_uniswiss_aa_composition_K = binding_uniswiss_aac.apply(lambda x: x.get('K', 0)).mean()\n",
+        "non_binding_uniswiss_aa_composition_K = non_binding_uniswiss_aac.apply(lambda x: x.get('K', 0)).mean()\n",
+        "\n",
+        "# Display the results for Arginine (R) and Lysine (K) content for both datasets\n",
+        "print(f\"Average Arginine (R) content in DNA binding proteins (PDB): {binding_pdb_aa_composition_R}\")\n",
+        "print(f\"Average Arginine (R) content in Non-binding proteins (PDB): {non_binding_pdb_aa_composition_R}\")\n",
+        "print(f\"Average Lysine (K) content in DNA binding proteins (PDB): {binding_pdb_aa_composition_K}\")\n",
+        "print(f\"Average Lysine (K) content in Non-binding proteins (PDB): {non_binding_pdb_aa_composition_K}\")\n",
+        "\n",
+        "print(f\"\\nAverage Arginine (R) content in DNA binding proteins (UniSwiss): {binding_uniswiss_aa_composition_R}\")\n",
+        "print(f\"Average Arginine (R) content in Non-binding proteins (UniSwiss): {non_binding_uniswiss_aa_composition_R}\")\n",
+        "print(f\"Average Lysine (K) content in DNA binding proteins (UniSwiss): {binding_uniswiss_aa_composition_K}\")\n",
+        "print(f\"Average Lysine (K) content in Non-binding proteins (UniSwiss): {non_binding_uniswiss_aa_composition_K}\")\n"
+      ],
       "metadata": {
-        "id": "GsYivO1WMkAj"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GsYivO1WMkAj",
+        "outputId": "b0673586-cc0c-4903-9a50-34e9d0b3052b"
       },
-      "execution_count": 54,
-      "outputs": []
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Average Arginine (R) content in DNA binding proteins (PDB): 6.382541193645413\n",
+            "Average Arginine (R) content in Non-binding proteins (PDB): 4.937531567689985\n",
+            "Average Lysine (K) content in DNA binding proteins (PDB): 6.3590479133556626\n",
+            "Average Lysine (K) content in Non-binding proteins (PDB): 6.241306172156521\n",
+            "\n",
+            "Average Arginine (R) content in DNA binding proteins (UniSwiss): 7.639966639144215\n",
+            "Average Arginine (R) content in Non-binding proteins (UniSwiss): 5.217976174401541\n",
+            "Average Lysine (K) content in DNA binding proteins (UniSwiss): 6.3590479133556626\n",
+            "Average Lysine (K) content in Non-binding proteins (UniSwiss): 6.241306172156521\n"
+          ]
+        }
+      ]
     }
   ]
 }
