W1 - Modified Dataset Load + Understanding - Dataset

--- a/BioInformatik_UAS.ipynb
+++ b/BioInformatik_UAS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPjmgk1NoWz6+mZRktJk6rw"
+      "authorship_tag": "ABX9TyMk5Yki0nE0vz2IRw8hyC/z"
     },
     "kernelspec": {
       "name": "python3",
@@ -59,16 +59,16 @@
         "print(pdb.head())\n",
         "\n",
         "print(\"\\nRaw UniSwiss Dataset:\")\n",
-        "print(uniswiss.head())"
+        "print(uniswiss.head())\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "AXSYtCVG1Lqi",
-        "outputId": "c42d2e88-2a34-4e71-a693-3f8031633eab"
+        "outputId": "439766f0-5f2d-4bc9-a1f8-0db447111761"
       },
-      "execution_count": 15,
+      "execution_count": 109,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,6 +109,9 @@
         "print(\"Total PDB Sequence:\", len(pdb))\n",
         "print(\"Total Uniswiss Sequence:\", len(uniswiss))\n",
         "\n",
+        "pdb['sequence_length'] = pdb['sequence'].apply(len)\n",
+        "uniswiss['sequence_length'] = uniswiss['sequence'].apply(len)\n",
+        "\n",
         "print(\"\\nAverage PDB Sequence Length:\", int(pdb['sequence_length'].mean()))\n",
         "print(\"Average Uniswiss Sequence Length:\", int(uniswiss['sequence_length'].mean()))\n",
         "\n",
@@ -124,21 +127,34 @@
         "print(\"\\nMissing Values in UniSwiss Dataset:\")\n",
         "print(uniswiss.isnull().sum())\n",
         "\n",
-        "# Check the label distribution (assuming 'label' column exists)\n",
+        "# Check the label distribution\n",
         "print(\"\\nLabel Distribution in PDB Dataset:\")\n",
         "print(pdb['label'].value_counts())\n",
         "\n",
         "print(\"\\nLabel Distribution in UniSwiss Dataset:\")\n",
-        "print(uniswiss['label'].value_counts())"
+        "print(uniswiss['label'].value_counts())\n",
+        "\n",
+        "# Check the set distribution for split\n",
+        "print(\"\\nRaw PDB Dataset split:\")\n",
+        "pdb_set_counts = pdb['set'].value_counts()\n",
+        "pdb_set_percentage = (pdb_set_counts / len(pdb)) * 100\n",
+        "print(pdb_set_counts)\n",
+        "print(pdb_set_percentage)\n",
+        "\n",
+        "print(\"\\nRaw UniSwiss Dataset Split:\")\n",
+        "uniswiss_set_counts = uniswiss['set'].value_counts()\n",
+        "uniswiss_set_percentage = (uniswiss_set_counts / len(uniswiss)) * 100\n",
+        "print(uniswiss_set_counts)\n",
+        "print(uniswiss_set_percentage)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "rXQGMG3PGBHm",
-        "outputId": "f4e9db86-cab9-4690-e634-16729e1451fb"
+        "outputId": "507ffc62-1e0c-404b-da51-c9602937ba52"
       },
-      "execution_count": 42,
+      "execution_count": 110,
       "outputs": [
         {
           "output_type": "stream",
@@ -182,7 +198,27 @@
             "label\n",
             "1    4881\n",
             "0    4881\n",
-            "Name: count, dtype: int64\n"
+            "Name: count, dtype: int64\n",
+            "\n",
+            "Raw PDB Dataset split:\n",
+            "set\n",
+            "train    1063\n",
+            "test      186\n",
+            "Name: count, dtype: int64\n",
+            "set\n",
+            "train    85.108086\n",
+            "test     14.891914\n",
+            "Name: count, dtype: float64\n",
+            "\n",
+            "Raw UniSwiss Dataset Split:\n",
+            "set\n",
+            "train    9000\n",
+            "test      762\n",
+            "Name: count, dtype: int64\n",
+            "set\n",
+            "train    92.194222\n",
+            "test      7.805778\n",
+            "Name: count, dtype: float64\n"
           ]
         }
       ]
@@ -212,25 +248,17 @@
     {
       "cell_type": "code",
       "source": [
-        "# Function to calculate sequence length\n",
-        "def sequence_length_distribution(dataset, seq_column):\n",
-        "    return dataset[seq_column].apply(len)\n",
-        "\n",
         "# Plot sequence length distribution for both datasets\n",
         "plt.figure(figsize=(14, 7))\n",
         "\n",
-        "# PDB Dataset\n",
-        "pdb['sequence_length'] = sequence_length_distribution(pdb, 'sequence')\n",
-        "\n",
+        "# PDB Sequence Length Distribution\n",
         "plt.subplot(1, 2, 1)\n",
         "plt.hist(pdb['sequence_length'], bins=30, alpha=0.7, color='blue')\n",
         "plt.title('Sequence Length Distribution - PDB Dataset')\n",
         "plt.xlabel('Sequence Length')\n",
         "plt.ylabel('Frequency')\n",
         "\n",
-        "# UniSwiss Dataset\n",
-        "uniswiss['sequence_length'] = sequence_length_distribution(uniswiss, 'sequence')\n",
-        "\n",
+        "# UniSwiss Sequence Length Distribution\n",
         "plt.subplot(1, 2, 2)\n",
         "plt.hist(uniswiss['sequence_length'], bins=30, alpha=0.7, color='green')\n",
         "plt.title('Sequence Length Distribution - UniSwiss Dataset')\n",
@@ -238,7 +266,7 @@
         "plt.ylabel('Frequency')\n",
         "\n",
         "plt.tight_layout()\n",
-        "plt.show()\n"
+        "plt.show()"
       ],
       "metadata": {
         "colab": {
@@ -246,9 +274,9 @@
           "height": 707
         },
         "id": "L1FQd_niAFJ4",
-        "outputId": "85e9b1d6-0c8b-4f57-bb02-a00585fde5e9"
+        "outputId": "69cb9088-2908-4fbe-e9d0-31270373dec9"
       },
-      "execution_count": 54,
+      "execution_count": 118,
       "outputs": [
         {
           "output_type": "display_data",
