W1 - Add uniq identifier - Analyse

--- a/BioInformatik_UAS.ipynb
+++ b/BioInformatik_UAS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNoakFas7ukJlhQXevtxzzR",
+      "authorship_tag": "ABX9TyP2yr93F4aFgThSipgf7KNV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,16 +82,16 @@
         "\n",
         "print(\"\\nUniSwiss Info:\")\n",
         "print(uniswiss.info())\n",
-        "print(\"Shape:\", uniswiss.shape)"
+        "print(\"Shape:\", uniswiss.shape)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "AXSYtCVG1Lqi",
-        "outputId": "11f33f4b-d63c-41ce-b3c4-98c5cffbdb13"
+        "outputId": "b8640308-006c-4a63-d8e2-8fbfa83a6235"
       },
-      "execution_count": 26,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,7 +141,9 @@
             "dtypes: int64(1), object(3)\n",
             "memory usage: 305.2+ KB\n",
             "None\n",
-            "Shape: (9762, 4)\n"
+            "Shape: (9762, 4)\n",
+            "Unique identifiers in PDB: 1207\n",
+            "Unique identifiers in UniSwiss: 9762\n"
           ]
         }
       ]
@@ -190,6 +192,9 @@
         "print(\"\\nMissing Values in UniSwiss Dataset:\")\n",
         "print(uniswiss.isnull().sum())\n",
         "\n",
+        "print(\"\\nUnique identifiers in PDB:\", pdb['identifier'].nunique())\n",
+        "print(\"\\nUnique identifiers in UniSwiss:\", uniswiss['identifier'].nunique())\n",
+        "\n",
         "print(\"\\nLabel Distribution in PDB Dataset:\")\n",
         "print(pdb_label_counts)\n",
         "print(\"\\nLabel Distribution in UniSwiss Dataset:\")\n",
@@ -208,9 +213,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5GHg95454VEt",
-        "outputId": "09adf77f-8b4b-4448-bb3c-a71f8c8a43f5"
+        "outputId": "f4d56f4f-7e37-449b-a041-087b3602f9cc"
       },
-      "execution_count": 45,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
@@ -243,6 +248,10 @@
             "set           0\n",
             "seq_len       0\n",
             "dtype: int64\n",
+            "\n",
+            "Unique identifiers in PDB: 1207\n",
+            "\n",
+            "Unique identifiers in UniSwiss: 9762\n",
             "\n",
             "Label Distribution in PDB Dataset:\n",
             "label\n",
