W1 - Add std and median understanding dataset - Analyse

--- a/BioInformatik_UAS.ipynb
+++ b/BioInformatik_UAS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2yr93F4aFgThSipgf7KNV",
+      "authorship_tag": "ABX9TyN91MccBMhu2rfwZOxmpx2Z",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -181,19 +181,25 @@
         "print(\"\\nAverage PDB Sequence Length:\", int(pdb['seq_len'].mean()))\n",
         "print(\"Average Uniswiss Sequence Length:\", int(uniswiss['seq_len'].mean()))\n",
         "\n",
+        "print(\"\\nMedian PDB Sequence Length:\", round(pdb['seq_len'].median(), 2))\n",
+        "print(\"Median UniSwiss Sequence Length:\", round(uniswiss['seq_len'].median(), 2))\n",
+        "\n",
+        "print(\"\\nStd Dev PDB Sequence Length:\", round(pdb['seq_len'].std(), 2))\n",
+        "print(\"Std Dev UniSwiss Sequence Length:\", round(uniswiss['seq_len'].std(), 2))\n",
+        "\n",
         "print(\"\\nMinimum PDB Sequence Length:\", pdb['seq_len'].min())\n",
         "print(\"Maximum PDB Sequence Length:\", pdb['seq_len'].max())\n",
         "\n",
         "print(\"\\nMinimum Uniswiss Sequence Length:\", uniswiss['seq_len'].min())\n",
         "print(\"Maximum Uniswiss Sequence Length:\", uniswiss['seq_len'].max())\n",
         "\n",
+        "print(\"\\nUnique identifiers PDB:\", pdb['identifier'].nunique())\n",
+        "print(\"Unique identifiers UniSwiss:\", uniswiss['identifier'].nunique())\n",
+        "\n",
         "print(\"\\nMissing Values in PDB Dataset:\")\n",
         "print(pdb.isnull().sum())\n",
         "print(\"\\nMissing Values in UniSwiss Dataset:\")\n",
         "print(uniswiss.isnull().sum())\n",
-        "\n",
-        "print(\"\\nUnique identifiers in PDB:\", pdb['identifier'].nunique())\n",
-        "print(\"\\nUnique identifiers in UniSwiss:\", uniswiss['identifier'].nunique())\n",
         "\n",
         "print(\"\\nLabel Distribution in PDB Dataset:\")\n",
         "print(pdb_label_counts)\n",
@@ -213,9 +219,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5GHg95454VEt",
-        "outputId": "f4d56f4f-7e37-449b-a041-087b3602f9cc"
+        "outputId": "a3b9e4a6-72bf-4570-a636-b6eae9e47a03"
       },
-      "execution_count": 67,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "stream",
@@ -227,11 +233,20 @@
             "Average PDB Sequence Length: 243\n",
             "Average Uniswiss Sequence Length: 475\n",
             "\n",
+            "Median PDB Sequence Length: 192.0\n",
+            "Median UniSwiss Sequence Length: 356.0\n",
+            "\n",
+            "Std Dev PDB Sequence Length: 184.23\n",
+            "Std Dev UniSwiss Sequence Length: 462.31\n",
+            "\n",
             "Minimum PDB Sequence Length: 50\n",
             "Maximum PDB Sequence Length: 1323\n",
             "\n",
             "Minimum Uniswiss Sequence Length: 50\n",
             "Maximum Uniswiss Sequence Length: 8515\n",
+            "\n",
+            "Unique identifiers PDB: 1207\n",
+            "Unique identifiers UniSwiss: 9762\n",
             "\n",
             "Missing Values in PDB Dataset:\n",
             "identifier    0\n",
@@ -248,10 +263,6 @@
             "set           0\n",
             "seq_len       0\n",
             "dtype: int64\n",
-            "\n",
-            "Unique identifiers in PDB: 1207\n",
-            "\n",
-            "Unique identifiers in UniSwiss: 9762\n",
             "\n",
             "Label Distribution in PDB Dataset:\n",
             "label\n",
