W1 - Add preprocessing cleaning dataset - PreProcess

--- a/BioInformatik_UAS.ipynb
+++ b/BioInformatik_UAS.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN91MccBMhu2rfwZOxmpx2Z",
+      "authorship_tag": "ABX9TyOi8wQmXBwIk80empWZ6OtN",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -89,9 +89,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AXSYtCVG1Lqi",
-        "outputId": "b8640308-006c-4a63-d8e2-8fbfa83a6235"
+        "outputId": "5452c82c-d68f-409d-b29d-21a46707a32c"
       },
-      "execution_count": 65,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "stream",
@@ -141,9 +141,7 @@
             "dtypes: int64(1), object(3)\n",
             "memory usage: 305.2+ KB\n",
             "None\n",
-            "Shape: (9762, 4)\n",
-            "Unique identifiers in PDB: 1207\n",
-            "Unique identifiers in UniSwiss: 9762\n"
+            "Shape: (9762, 4)\n"
           ]
         }
       ]
@@ -298,6 +296,101 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#**Pre-Processing**\n",
+        "##Objective\n",
+        "1. Cleaning dataset\n",
+        "2. feature extraction\n",
+        "3. Split dataset\n",
+        "4. Scaling\n"
+      ],
+      "metadata": {
+        "id": "aBrrCbXAh0id"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###1. Cleaning dataset"
+      ],
+      "metadata": {
+        "id": "S3CjFQuOiQix"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Clean duplicates dataset\n",
+        "# 1. Drop duplicate identifiers\n",
+        "pdb = pdb.drop_duplicates(subset=\"identifier\", keep=\"first\")\n",
+        "uniswiss = uniswiss.drop_duplicates(subset=\"identifier\", keep=\"first\")\n",
+        "\n",
+        "# 2. Convert to uppercase and remove invalid amino acids\n",
+        "valid_aa = set('ACDEFGHIKLMNPQRSTVWY')\n",
+        "pdb['sequence'] = pdb['sequence'].str.upper().apply(\n",
+        "    lambda s: ''.join([a for a in s if a in valid_aa])\n",
+        ")\n",
+        "\n",
+        "uniswiss['sequence'] = uniswiss['sequence'].str.upper().apply(\n",
+        "    lambda s: ''.join([a for a in s if a in valid_aa])\n",
+        ")\n",
+        "\n",
+        "# Check no null value\n",
+        "pdb = pdb.dropna(subset=['sequence', 'label'])\n",
+        "uniswiss = uniswiss.dropna(subset=['sequence', 'label'])\n",
+        "\n",
+        "# Get protein sequence after cleaning\n",
+        "print(\"PDB protein sequence after cleaning:\", len(pdb))\n",
+        "print(\"UniSwiss protein sequence after cleaning:\", len(uniswiss))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3y6fY9YlidEl",
+        "outputId": "70261c01-4df7-496d-ce1b-bba3b89acd00"
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "PDB protein sequence after cleaning: 1207\n",
+            "UniSwiss protein sequence after cleaning: 9762\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###2. Feature Extraction"
+      ],
+      "metadata": {
+        "id": "5vyDGIaoiUTo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###3. Split Dataset"
+      ],
+      "metadata": {
+        "id": "GoULeyVDiXGg"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###4. Scaling"
+      ],
+      "metadata": {
+        "id": "l02QGqeeiZvN"
+      }
     },
     {
       "cell_type": "markdown",
