W1 - Add feature Extract Section - Feature Extract

--- a/BioInformatik_UAS.ipynb
+++ b/BioInformatik_UAS.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "aBrrCbXAh0id"
       ],
-      "authorship_tag": "ABX9TyMP8Apr7k7znQPimVxW1QOi",
+      "authorship_tag": "ABX9TyPcoqoWnNkITU7S6OcqlUwJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -121,6 +121,8 @@
         "    accuracy_score, precision_score, recall_score, f1_score,\n",
         "    matthews_corrcoef, roc_auc_score, confusion_matrix, RocCurveDisplay\n",
         ") # For evaluate\n",
+        "from itertools import product # For extraction AAC\n",
+        "\n",
         "\n",
         "np.random.seed(42)\n",
         "random.seed(42)"
@@ -711,6 +713,242 @@
     {
       "cell_type": "markdown",
       "source": [
+        "#**Features Extraction**\n",
+        "##Objective\n",
+        "1. AAC\n",
+        "2. DPC\n",
+        "3. Apply AAC & DPC\n",
+        "4. Convert into dataframes\n",
+        "5. Combine Feat + Lables\n"
+      ],
+      "metadata": {
+        "id": "MrKapcWG9-mt"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###1. AAC"
+      ],
+      "metadata": {
+        "id": "266kjEWg_cBE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Function to compute AAC\n",
+        "def AAC(seq):\n",
+        "    amino_acids = \"ACDEFGHIKLMNPQRSTVWY\"\n",
+        "    seq = seq.upper()\n",
+        "    length = len(seq)\n",
+        "    counts = {aa: 0 for aa in amino_acids}\n",
+        "\n",
+        "    # Count occurrences of each amino acid\n",
+        "    for aa in seq:\n",
+        "        if aa in counts:\n",
+        "            counts[aa] += 1\n",
+        "\n",
+        "    # Normalize by sequence length to get frequencies\n",
+        "    if length > 0:\n",
+        "        for aa in counts:\n",
+        "            counts[aa] /= length\n",
+        "    else:\n",
+        "        for aa in counts:\n",
+        "            counts[aa] = 0.0\n",
+        "\n",
+        "    return counts\n"
+      ],
+      "metadata": {
+        "id": "3IqPGmiq_eUF"
+      },
+      "execution_count": 186,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###2. DPC"
+      ],
+      "metadata": {
+        "id": "1drA-2i8AlgV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def DPC(seq):\n",
+        "    amino_acids = \"ACDEFGHIKLMNPQRSTVWY\"\n",
+        "    dipeptides = [\"\".join(p) for p in product(amino_acids, repeat=2)]  # All 400 pairs\n",
+        "\n",
+        "    counts = {dp: 0 for dp in dipeptides}\n",
+        "    seq = seq.upper()\n",
+        "\n",
+        "    # Count dipeptides\n",
+        "    for i in range(len(seq) - 1):\n",
+        "        dp = seq[i:i+2]\n",
+        "        if dp in counts:\n",
+        "            counts[dp] += 1\n",
+        "\n",
+        "    total = sum(counts.values())\n",
+        "\n",
+        "    # Normalize counts\n",
+        "    if total > 0:\n",
+        "        for dp in counts:\n",
+        "            counts[dp] /= total\n",
+        "    else:\n",
+        "        for dp in counts:\n",
+        "            counts[dp] = 0.0\n",
+        "\n",
+        "    return counts"
+      ],
+      "metadata": {
+        "id": "H9BXNHBmAofs"
+      },
+      "execution_count": 187,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###3. Apply DPC and AAC Extraction"
+      ],
+      "metadata": {
+        "id": "zlC0QOSlAvF8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Applying AAC and DPC features for PDB1063...\")\n",
+        "pdb_aac = pdb_df[\"sequence\"].apply(lambda s: AAC(s))\n",
+        "pdb_dpc = pdb_df[\"sequence\"].apply(lambda s: DPC(s))\n",
+        "\n",
+        "print(\"Applying AAC and DPC features for UniSwiss...\")\n",
+        "uni_aac = uni_df[\"sequence\"].apply(lambda s: AAC(s))\n",
+        "uni_dpc = uni_df[\"sequence\"].apply(lambda s: DPC(s))\n",
+        "\n",
+        "print(\"Feature extraction completed.\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eGRv3iS7Azkl",
+        "outputId": "4df1e2c6-43c1-49af-8e01-b5759f12c7bc"
+      },
+      "execution_count": 188,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Applying AAC and DPC features for PDB1063...\n",
+            "Applying AAC and DPC features for UniSwiss...\n",
+            "Feature extraction completed.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###4. Convert into DataFrames"
+      ],
+      "metadata": {
+        "id": "txU405hGBHLd"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pdb_aac_df = pd.DataFrame(list(pdb_aac))\n",
+        "pdb_dpc_df = pd.DataFrame(list(pdb_dpc))\n",
+        "uni_aac_df = pd.DataFrame(list(uni_aac))\n",
+        "uni_dpc_df = pd.DataFrame(list(uni_dpc))\n",
+        "\n",
+        "# Get shape for each dataset\n",
+        "print(\"AAC shape (PDB):\", pdb_aac_df.shape)\n",
+        "print(\"DPC shape (PDB):\", pdb_dpc_df.shape)\n",
+        "print(\"AAC shape (UniSwiss):\", uni_aac_df.shape)\n",
+        "print(\"DPC shape (UniSwiss):\", uni_dpc_df.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SGdYo9NEBKVV",
+        "outputId": "3cae2fa5-3779-4e06-d73c-d694507be7b1"
+      },
+      "execution_count": 189,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "AAC shape (PDB): (1171, 20)\n",
+            "DPC shape (PDB): (1171, 400)\n",
+            "AAC shape (UniSwiss): (9697, 20)\n",
+            "DPC shape (UniSwiss): (9697, 400)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###5. Combine Feat + Labs"
+      ],
+      "metadata": {
+        "id": "71qGpOHsBWc0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Merge AAC, DPC, and physicochemical descriptors\n",
+        "pdb_features = pd.concat(\n",
+        "    [pdb_aac_df, pdb_dpc_df, pdb_df[[\"avg_mw\", \"avg_hydrophobicity\", \"avg_charge\"]].reset_index(drop=True)],\n",
+        "    axis=1\n",
+        ")\n",
+        "\n",
+        "uni_features = pd.concat(\n",
+        "    [uni_aac_df, uni_dpc_df, uni_df[[\"avg_mw\", \"avg_hydrophobicity\", \"avg_charge\"]].reset_index(drop=True)],\n",
+        "    axis=1\n",
+        ")\n",
+        "\n",
+        "# Extract label vectors\n",
+        "pdb_labels = pdb_df[\"label\"].values\n",
+        "uni_labels = uni_df[\"label\"].values\n",
+        "\n",
+        "print(\"\\nFinal feature matrix shapes:\")\n",
+        "print(\"PDB1063:\", pdb_features.shape)\n",
+        "print(\"UniSwiss:\", uni_features.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zL9wk-eDBaR0",
+        "outputId": "04230306-1531-4d01-98fc-3b63c524d14e"
+      },
+      "execution_count": 190,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Final feature matrix shapes:\n",
+            "PDB1063: (1171, 423)\n",
+            "UniSwiss: (9697, 423)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#**Pre-Process**\n",
         "##Objective\n",
         "1. Split Dataset\n",
@@ -744,16 +982,45 @@
         "\n",
         "print(\"\\nRaw UniSwiss Dataset Split:\")\n",
         "print(uniswiss_set_counts)\n",
-        "print(uniswiss_set_percentage)"
+        "print(uniswiss_set_percentage)\n",
+        "\n",
+        "RANDOM_SEED = 42\n",
+        "def split_dataset(X, y, train_size=0.8, val_size=0.1, test_size=0.1, random_state=RANDOM_SEED):\n",
+        "    sss1 = StratifiedShuffleSplit(n_splits=1, test_size=(val_size + test_size), random_state=random_state)\n",
+        "    for train_idx, temp_idx in sss1.split(X, y):\n",
+        "        X_train, X_temp = X.iloc[train_idx], X.iloc[temp_idx]\n",
+        "        y_train, y_temp = y[train_idx], y[temp_idx]\n",
+        "\n",
+        "    # Split temp into validation and test (equal parts of remaining)\n",
+        "    relative_test_size = test_size / (val_size + test_size)\n",
+        "    sss2 = StratifiedShuffleSplit(n_splits=1, test_size=relative_test_size, random_state=random_state)\n",
+        "    for val_idx, test_idx in sss2.split(X_temp, y_temp):\n",
+        "        X_val, X_test = X_temp.iloc[val_idx], X_temp.iloc[test_idx]\n",
+        "        y_val, y_test = y_temp[val_idx], y_temp[test_idx]\n",
+        "\n",
+        "    return X_train, X_val, X_test, y_train, y_val, y_test\n",
+        "\n",
+        "\n",
+        "# --- Apply the split for PDB dataset ---\n",
+        "X_train_pdb, X_val_pdb, X_test_pdb, y_train_pdb, y_val_pdb, y_test_pdb = split_dataset(pdb_features, pdb_labels)\n",
+        "\n",
+        "# --- Apply the split for UniSwiss dataset ---\n",
+        "X_train_uni, X_val_uni, X_test_uni, y_train_uni, y_val_uni, y_test_uni = split_dataset(uni_features, uni_labels)\n",
+        "\n",
+        "# --- Print data shapes to confirm successful split ---\n",
+        "print(\"\\nPDB1063 splits:\")\n",
+        "print(\" Train:\", X_train_pdb.shape, \"| Val:\", X_val_pdb.shape, \"| Test:\", X_test_pdb.shape)\n",
+        "print(\"UniSwiss splits:\")\n",
+        "print(\" Train:\", X_train_uni.shape, \"| Val:\", X_val_uni.shape, \"| Test:\", X_test_uni.shape)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8xWbLCqZolwx",
-        "outputId": "94152c4f-e821-427a-ced6-8308a37a44e5"
+        "outputId": "f1766488-77cf-4eff-8f13-4713cba72b96"
       },
-      "execution_count": 155,
+      "execution_count": 194,
       "outputs": [
         {
           "output_type": "stream",
@@ -778,7 +1045,60 @@
             "set\n",
             "train    92.203774\n",
             "test      7.796226\n",
-            "Name: count, dtype: float64\n"
+            "Name: count, dtype: float64\n",
+            "\n",
+            "PDB1063 splits:\n",
+            " Train: (936, 423) | Val: (117, 423) | Test: (118, 423)\n",
+            "UniSwiss splits:\n",
+            " Train: (7757, 423) | Val: (970, 423) | Test: (970, 423)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###2. Scaling/normalize"
+      ],
+      "metadata": {
+        "id": "l5QYwxOaC6dE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define variable for each dataset\n",
+        "scaler_pdb = StandardScaler()\n",
+        "scaler_uni = StandardScaler()\n",
+        "\n",
+        "# Fit on training data only, then transform all splits\n",
+        "X_train_pdb_scaled = scaler_pdb.fit_transform(X_train_pdb)\n",
+        "X_val_pdb_scaled   = scaler_pdb.transform(X_val_pdb)\n",
+        "X_test_pdb_scaled  = scaler_pdb.transform(X_test_pdb)\n",
+        "\n",
+        "X_train_uni_scaled = scaler_uni.fit_transform(X_train_uni)\n",
+        "X_val_uni_scaled   = scaler_uni.transform(X_val_uni)\n",
+        "X_test_uni_scaled  = scaler_uni.transform(X_test_uni)\n",
+        "\n",
+        "#Get confirmation of scaling\n",
+        "print(\"Feature scaling completed.\")\n",
+        "print(\"Example: mean of PDB train (after scaling):\", np.mean(X_train_pdb_scaled), \"| std:\", np.std(X_train_pdb_scaled))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T5b-rlnuC-Gl",
+        "outputId": "8df4a7fb-6e2c-4bc4-f14b-fe9bf0378130"
+      },
+      "execution_count": 196,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Feature scaling completed.\n",
+            "Example: mean of PDB train (after scaling): 1.2028481659372591e-17 | std: 0.9999999999999999\n"
           ]
         }
       ]
